# ofxstatement-transferwise

./: MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/ofxstatement/plugins/: transferwise.py
src/ofxstatement_wise/: wise.py
tests/: sample-statement.csv  test_transferwise.py
tests/__snapshots__/: test_transferwise.ambr
